# NSE-Paper-Trader

./: README.md  schema.md
backend/: Dockerfile  alembic.ini  nse_paper_trader.db  pyproject.toml
backend/alembic/: env.py
backend/src/: deps.py  main.py
backend/src/api/: auth.py  historical.py  market_feed.py  option_chain.py  paper_orders.py  portfolio.py  positions.py  schemas.py  strategy.py  ws.py
backend/src/config/: __init__.py  instruments.py  market_calendar.py  pricing.py  scheduler.py  settings.py
backend/src/middleware/: auth_middleware.py  rate_limit.py  request_logger.py
backend/src/models/: __init__.py  base.py  paper_order.py  position.py  trade.py  user.py
backend/src/services/: __init__.py  cache_service.py  charges.py  dhan_client.py  greeks_service.py  margin_service.py  notification_service.py  paper_engine.py  pnl_service.py  slippage.py
backend/src/utils/: exceptions.py  ist_clock.py
docs/: ARCHITECTURE.md  BACKEND_SERVICES.md  COMPONENTS.md  DATA_MODELS.md  GREEKS.md  PAGES.md  PAPER_ENGINE.md  RISK_RULES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useDhanWebSocket.ts  useGreeks.ts  useMarketStatus.ts  useOptionChain.ts  usePaperOrder.ts  usePositions.ts  useVirtualBalance.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  OptionChainPage.tsx  OrdersPage.tsx  PositionsPage.tsx  SettingsPage.tsx  StrategyPage.tsx
frontend/src/services/: apiClient.ts  historicalService.ts  (+4 more)
(+43 files in other folders)
